<resources>
    <string name="app_name">MyCoursesApp</string>
    <string name="app_name_build">EduK</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login"><u>I already have an account , login</u></string>
    <string name="register_text"><u>Register</u></string>
    <string name="login_text"><u>Login</u></string>
    <string name="action_settings">Settings</string>

    <string name="pref_key_transition_time" translatable="false">pref_key_transition_time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_title_import">Forum</string>
    <string name="nav_title_gallery">Courses</string>
    <string name="nav_title_slideshow">Events</string>
    <string name="nav_title_tools">Profile</string>
    <string name="nav_title_share">Share</string>
    <string name="nav_title_toggle_theme">Dark/Light Mode</string>
    <string name="title_topic_course">Design Thinking</string>
    <string name="number_courses">19 courses</string>
    <string name="msg_splash">EducationApp</string>
    <string name="title_hey">Hey, What would you like to learn today ?</string>
    <string name="title_hey2">Hey, Would you like to participate in an event??</string>

    <string name="edt_search">Search Here</string>
    <string name="title_course_design">Design Thinking</string>
    <string name="title_course_design_count">19 courses</string>
    <string name="title_course_coding">Coding</string>
    <string name="title_course_coding_count">21 courses</string>
    <string name="title_find_courses">Find your courses</string>
    <string name="title_courses_available">10 course available</string>
    <string name="title_popular_courses">Courses</string>
    <string name="more">. .</string>
    <string name="hello_message">Hello roger</string>
    <string name="percentage_course"></string>


    <string name="text_see_more">See All</string>
    <string name="imageAccess">Image</string>
    <string name="message_banner">Refer your friends and\n earn free course *</string>
    <string name="title_drawer">E-Learning Application</string>
    <string name="email_drawer">TouchIT@esprit.tn</string>
    <string name="title_menu">Menu</string>
    <string name="title_courses">Courses</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_user">User</string>
    <string name="title_tutorials">Events</string>
    <string name="title_home_message"></string>
    <string name="title_course">Design Basic</string>
    <string name="course_details">Learn design basics.</string>
    <string name="twitterUsername">\@joeytribbiani</string>

</resources>
