<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_title_import"
            android:theme="@style/BlackText" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_title_gallery"
            android:theme="@style/BlackText" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_title_slideshow"
            android:theme="@style/BlackText" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_title_tools"
            android:theme="@style/BlackText" />
    </group>

    <item android:title="@string/nav_title_toggle_theme">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_title_share"
                android:visible="false"
                android:theme="@style/BlackText" />
            <item
                android:id="@+id/nav_dark_mode"
                android:icon="@android:drawable/ic_menu_day"
                android:title="@string/nav_title_toggle_theme"
                android:theme="@style/BlackText" />
        </menu>
    </item>
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_menu_manage"
        android:title="Logout"
        android:theme="@style/BlackText" />
</menu>
